squashing dem bugs

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -373,16 +373,26 @@ background-size: cover;
 /*Staff List*/
 #staffList{
 	background-color: rgba(0,0,0,0.5);
-	width: auto;
+	width: 40%;
 	padding: 15px;
 	border-radius: 15px;
+	margin-left: auto;
+	margin-right: auto;
 	text-align: justify;
 }
 #staffListItem{
+	text-align: justify;
 	margin-bottom: 20px;
-	width: 20%;
+	width: auto;
+	margin-right: 0px;
 	min-width: 50px;
 	line-height: 1.5;
+	margin-left: auto;
+	margin-right: auto;
+	margin-left: auto;
+		margin-right: auto;
+		width: 75%;
+		text-align: center;
 }
 /*Form*/
 #loginForm{
@@ -538,14 +548,13 @@ background-color: gold;
 	#homePageBody{
 		padding-bottom: 175px;
 	}
-	#staffListItem{
-		margin-left: auto;
-		margin-right: auto;
-		width: 75%;
-
-	}
-	#staffListItem{
-		text-align: center;
+	#staffList{
+		width: 100%;
+			margin-left: none;
+			border-radius: 0px;
+			padding-left: 0px;
+			padding-right: 0px;
+	margin-right: none;
 	}
 	.UCGameIconA{
 		width: 100%;
